--- a/Root Directory/Imitation/Football.html
+++ b/Root Directory/Imitation/Football.html
@@ -15,6 +15,9 @@
                 height: 230px;
             }
         </style>
-        <div></div>
+        <div>
+            <img class="tictakto" src="tic-tac-toe.png" alt="tic-tac-toe">
+            <img class="football" src="football_field.jpg" alt="football field">
+        </div>
     </body>
 </html>
