--- a/Root Directory/Quiz Page/quiz_page.html
+++ b/Root Directory/Quiz Page/quiz_page.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>Quiz Page</title>
         <!--css file-->
-        <link rel="stylesheet" type="text/css" href="quiz_animations.css">
+        <link rel="stylesheet" type="text/css" href="quiz.css">
     </head>
 
     <body>
