--- a/Root Directory/Quiz Page/quiz_page.html
+++ b/Root Directory/Quiz Page/quiz_page.html
@@ -11,7 +11,7 @@
     <body>
         <div>
             <p class="animation">Welcome to quiz page!</p>
-            <p>Quiz Page</p>
+            <h2 style="text-align: center;">Quiz Page</h2>
         </div>
         <div>
             <p class="question">Who was the Ancient Greek God of the Sun?</p>
