--- a/Root Directory/Reverse/Reverse.html
+++ b/Root Directory/Reverse/Reverse.html
@@ -86,7 +86,7 @@
                         document.getElementById("message").textContent = "白の勝ち！";
                     }else if(numWhite < numBlack) {
                         document.getElementById("message").textContent = "黒の勝ち！";
-                    }else if(numWhite < numBlack) {
+                    }else{
                         document.getElementById("message").textContent = "引き分け";
                     }
                     return
@@ -94,7 +94,7 @@
 
                 if  (!blackFlip) {
                     showMessage("黒スキップ");
-                    muTurn = false;
+                    myTurn = false;
                 } else if (!whiteFlip) {
                     showMessage("白スキップ");
                     myTurn = true;
@@ -105,13 +105,6 @@
                     setTimeout(think, 1000);
                 }
             }
-        function showMessage(str) {
-            document.getElementById("message").textContent = str;
-            setTimeout(function () {
-                document.getElementById("message").textContent = "";
-            }, 2000)
-        }
-
         function showMessage(str) {
             document.getElementById("message").textContent = str;
             setTimeout(function () {
@@ -138,8 +131,8 @@
         }
 
         function put(i, j, color) {
-            let c = document.getElementById("cell" + i +j);
-            c.textContent = "&#9679;";
+            let c = document.getElementById("cell" + i + j);
+            c.textContent = "●";
             c.className = "cell " + (color == BLACK ? "black" : "white");
             data[i][j] = color;
         }
@@ -183,11 +176,22 @@
 
         function calcWeightData(tmpData) {
             let score = 0;
-            for (let y = 0; y < 8; y++) {
+            for (let x = 0; x < 8; x++) {
                 for (let y = 0; y < 8; y++) {
                     if (tmpData[x][y] == WHITE) {
                         score += WeightData[x][y];
                     }
+                }
+            }
+            return score;
+        }
+
+        function copyData() {
+            let tmpData = [];
+            for (let x = 0; x < 8; x++) {
+                tmpData[x] = [];
+                for (let y = 0; y < 8; y++) {
+                    tmpData[x][y] = data[x][y];
                 }
             }
             return tmpData;
@@ -241,7 +245,7 @@
                 data[x][y] == color ||
                 data[x][y] == 0
             ) {
-                return [;]
+                return [];
             }
             flipped.push([x, y]);
             while (true) {
