--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,13 +5,13 @@
         <title>football</title>
         <style>
             div {
-              background-image: url(football_field.jpg), url(tic-tac-toe.png);
               background-repeat: no-repeat;
-              width: 200%;
-              height: 100px;
+              background-image: url(football_field.jpg), url(tic-tac-toe.png);
+              width: 300%;
+              height: 150px;
               background-size: 100px auto, auto 200px;
-              background-position: 0px 0px, 50px 5px;
-              background-origin: content-box;
+              background-position: 15% 25%;
+              background-origin: padding-box;
             }
           </style>
     </head>
