--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -8,7 +8,8 @@
               background-image: url(football_field.jpg), url(tic-tac-toe.png);
               width: 500%;
               height: 200px;
-              background-size: 100px auto, auto 200px;
+              background-size: contain;
+              background-repeat: no repeat;
               background-position: 15% 25%;
               background-origin: padding-box;
             }
