--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -9,7 +9,7 @@
               width: 500%;
               height: 200px;
               background-size: contain;
-              background-repeat: no repeat;
+              background-repeat: no-repeat;
               background-position: 15% 25%;
               background-origin: padding-box;
             }
