--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,13 +5,8 @@ llo<!DOCTYPE html>
         <title>football</title>
         <style>
             div {
-              background-image: url(football_field.jpg), url(tic-tac-toe.png);
-              width: 500%;
-              height: 200px;
-              background-size: contain;
-              background-repeat: no-repeat;
-              background-position: 15% 25%;
-              background-origin: padding-box;
+              border: 27px solid #000;
+              border-image: url(tic-tac-toe.png) 27 round;
             }
           </style>
     </head>
