--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -1,4 +1,4 @@
-llo<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8">
@@ -6,7 +6,7 @@ llo<!DOCTYPE html>
         <style>
             div {
               border: 27px solid #000;
-              border-image: url(tic-tac-toe.png) 27 round;
+              border-image-repeat: url(tic-tac-toe.png) 27 round;
             }
           </style>
     </head>
