--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,8 +5,12 @@
         <title>football</title>
         <style>
             div {
-              border: 27px solid #000;
-              border-image-repeat: url(tic-tac-toe.png) 27 round;
+              border-style: solid;
+              border-image-source: url(tic-tac-toe.png);
+              border-image-slice: 32 32 32 32;
+              border-image-slice: 32px 32px 32px 32px;
+              border-width: 32px;
+              border-image-repeat: round;
             }
           </style>
     </head>
