--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -6,7 +6,7 @@
         <style>
             div {
               border-style: solid;
-              border-image-source: url(tic-tac-toe.png);
+              border-image-source: url(tic-tac-toe2.jpg);
               border-image-slice: 32 32 32 32;
               border-image-slice: 32px 32px 32px 32px;
               border-width: 32px;
