--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -4,12 +4,11 @@
         <meta charset="utf-8">
         <title>football</title>
         <style>
-            div {
-              border-style: solid;
+            .box {
+              width: 400px; height: 100px;
+              border: 20px solid gray;
               border-image-source: url(tic-tac-toe2.jpg);
-              border-image-slice: 32 32 32 32;
-              border-image-slice: 32px 32px 32px 32px;
-              border-width: 32px;
+              border-image-slice: 20;
               border-image-repeat: round;
             }
           </style>
