--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -6,7 +6,7 @@
         <style>
             .box {
               width: 400px; height: 100px;
-              border: 20px solid gray;
+              border: 20px solid;
               border-image-source: url(tic-tac-toe2.jpg);
               border-image-slice: 20;
               border-image-repeat: round;
