--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -4,16 +4,18 @@
         <meta charset="utf-8">
         <title>football</title>
         <style>
-            .box {
-              width: 400px; height: 100px;
-              border: 20px solid;
-              border-image-source: url(tic-tac-toe2.jpg);
-              border-image-slice: 20;
-              border-image-repeat: round;
+            div {
+              background-image: url(football_field.jpg), url(tic-tac-toe2.jpg);
+              background-repeat: no-repeat;
+              width: 200%;
+              height: 100px;
+              background-size: 100px auto, auto 200px;
+              background-position: 0px 0px, 50px 5px;
+              background-origin: content-box;
             }
           </style>
     </head>
     <body>
-        <div>hello</div>
+        <div></div>
     </body>
 </html>
