--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -7,11 +7,10 @@
             div {
               background-image: url(football_field.jpg), url(tic-tac-toe2.jpg);
               background-repeat: no-repeat;
-              width: 200%;
-              height: 100px;
+              padding: 15px;
               background-size: 100px auto, auto 200px;
-              background-position: 0px 0px, 50px 5px;
-              background-origin: content-box;
+              background-position: 20px 40px, 50px 5px;
+              background-origin: border-box;
             }
           </style>
     </head>
