--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,13 +5,14 @@
         <title>football</title>
         <style>
             div {
-              background-image: url(football_field.jpg), url(tic-tac-toe2.jpg);
-              background-repeat: no-repeat;
-              padding: 15px;
-              background-size: 100px auto, auto 200px;
-              background-position: 20px 40px, 50px 5px;
-              background-origin: border-box;
+             border: 10px solid #def;
+             margin-bottom: 10px;
             }
+            .border-image-repeat {
+            border-image-slice: 24;
+            border-image-source: url(tic-tac-toe2.jpg);
+            border-image-repeat: round;
+           }
           </style>
     </head>
     <body>
