--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,8 +5,8 @@
         <title>football</title>
         <style>
             div {
-             border: 10px solid #def;
-             margin-bottom: 10px;
+             border: 10px solid #000;
+             margin-bottom: 30px;
             }
             .border-image-repeat {
             border-image-slice: 24;
