--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -11,6 +11,7 @@
             .border-image-repeat {
             border-image-slice: 24;
             border-image-source: url(tic-tac-toe2.jpg);
+            border-image-width: 45px;
             border-image-repeat: round;
            }
           </style>
