--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,7 +5,7 @@
         <title>football</title>
         <style>
             div {
-             border: 1rem solid #C0C0C0;
+             border: 1rem solid transparent;
              margin-bottom: 30px;
             }
             .border-image-repeat {
