--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,15 +5,10 @@
         <title>football</title>
         <style>
             div {
-             border: 1rem solid #C0C0C0;
-             margin-bottom: 30px;
-            }
-            .border-image-repeat {
-            border-image-slice: 24;
-            border-image-source: url(tic-tac-toe2.jpg);
-            border-image-width: 45px;
-            border-image-repeat: round;
-           }
+             -webkit-border-image: url(tic-tac-toe2.jpg) 30 round;
+              border-image: url(tic-tac-toe2.jpg) 30 round;
+              border-width: 30px;  
+         }
           </style>
     </head>
     <body>
