--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,9 +5,11 @@
         <title>football</title>
         <style>
             div {
-             -webkit-border-image: url(tic-tac-toe2.jpg) 30 round;
-              border-image: url(tic-tac-toe2.jpg) 30 round;
-              border-width: 30px;  
+             border: 15px solid transparent;
+             padding: 15px;
+             border-image-source: url(tic-tac-toe2.jpg);
+             border-image-repeat: round;
+             border-image-slice: 30;
          }
           </style>
     </head>
