--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -8,6 +8,7 @@
              border: 30px solid transparent;
              padding: 50px;
              border-image-source: url(tic-tac-toe2.jpg);
+             border-color: #C0C0C0;
              border-image-repeat: round;
              border-image-slice: 70;
          }
