--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,14 +5,12 @@
         <title>football</title>
         <style>
             div {
-             border: 20px solid transparent;
+             border: 20px solid;
              padding: 35px;
-             border-image-source: url(tic-tac-toe2.jpg);
-             border-color: #C0C0C0;
-             border-image-repeat: round;
-             border-image-slice: 20;
-         }
-          </style>
+             border-image-source: url(tic-tac-toe2.jpg) 20 round;
+             filter: grayscale(100%);
+        }
+         </style>
     </head>
     <body>
         <div></div>
