--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,10 +5,10 @@
         <title>football</title>
         <style>
             div {
-             border: 50px solid;
+             margin: 1rem 30% auto;
+             border: 50px solid #C0C0C0;
              padding: 100px;
              border-image-source: url(tic-tac-toe2.jpg) 30 round;
-             filter: grayscale(100%);
             }
         </style>
     </head>
