--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,7 +5,7 @@
         <title>football</title>
         <style>
             div {
-             margin: 20% 45% auto;
+             margin: 2rem 45% auto;
              border: 50px solid #C0C0C0;
              padding: 100px;
              border-image-source: url(tic-tac-toe2.jpg) 27 round;
