--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,8 +5,8 @@
         <title>football</title>
         <style>
             div {
-             margin: 2rem 45% auto;
-             border: 50px solid #C0C0C0;
+             margin: 20px 45% auto;
+             border: 27px solid #C0C0C0;
              padding: 100px;
              border-image-source: url(tic-tac-toe2.jpg) 27 round;
             }
