--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,7 +5,7 @@
         <title>football</title>
         <style>
             div {
-             margin: 10px 50px 20px;
+             margin: 30px 50px auto;
              border: 27px solid #C0C0C0;
              padding: 100px;
              border-image-source: url(tic-tac-toe2.jpg) 27 round;
