--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,8 +5,10 @@
         <title>football</title>
         <style>
             div {
-             margin: 100px 200px auto;
+             width: 600px;
+             margin: 0 auto;
              border: 27px solid #C0C0C0;
+             border-image-slice:50;
              padding: 100px;
              border-image-repeat: url(tic-tac-toe2.jpg) 27 round;
             }
