--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -8,7 +8,7 @@
              width: 600px;
              margin: 0 auto;
              border: 27px solid #C0C0C0;
-             border-image-slice:27;
+             border-image-slice: 20% 30%;
              padding: 100px;
              border-image-repeat: url(tic-tac-toe2.jpg) 27 round;
             }
