--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,10 +5,10 @@
         <title>football</title>
         <style>
             div {
-             width: 200px;
+             width: 350px;
              margin: 0 auto;
              border: 27px solid #C0C0C0;
-             border-image-slice: 20% 30%;
+             border-image-slice: 30;
              border-image-repeat: url(tic-tac-toe2.jpg) 27 round;
             }
         </style>
