--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -7,7 +7,7 @@
             div {
              width: 350px;
              margin: 0 auto;
-             border: 27px solid #C0C0C0;
+             border: 27px solid #000;
              border-image-slice: 30;
              border-image-repeat: url(tic-tac-toe2.jpg) 54 round;
             }
