--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -9,7 +9,7 @@
              margin: 0 auto;
              border: 27px solid #000;
              border-image-slice: 30;
-             border-image-repeat: url(tic-tac-toe2.jpg) 54 round;
+             border-image: url(tic-tac-toe2.jpg) 27 round;
             }
         </style>
     </head>
