--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -7,9 +7,9 @@
             div {
              width: 350px;
              margin: 0 auto;
-             border: 18px solid #000;
-             border-image-slice: 18;
-             border-image: url(tic-tac-toe2.jpg) 18 stretch;
+             border: 30px solid #000;
+             border-image-slice: 30;
+             border-image: url(tic-tac-toe2.jpg) 30 / 19 round;
             }
         </style>
     </head>
