--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -9,7 +9,7 @@
              margin: 0 auto;
              border: 30px solid #000;
              border-image-slice: 30;
-             border-image: url(tic-tac-toe2.jpg) 30 / 19 round;
+             border-image: url(tic-tac-toe2.jpg) 30 / 19px round;
             }
         </style>
     </head>
