--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,11 +5,11 @@
         <title>football</title>
         <style>
             div {
-             width: 350px;
-             margin: 0 auto;
-             border: 30px solid #000;
-             border-image-slice: 30;
-             border-image: url(tic-tac-toe2.jpg) 30 / 19px round;
+             border-image-source: url(tic-tac-toe2.jpg);
+             border-image-slice: 100;
+             border-image-width: 50px;
+             border-image-outset: 0px;
+             border-image-repeat: round;
             }
         </style>
     </head>
