--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,6 +5,9 @@
         <title>football</title>
         <style>
             div {
+             border: solid #ccc 50px;
+             display: inline-block;
+             padding: 30px;
              border-image-source: url(tic-tac-toe2.jpg);
              border-image-slice: 100;
              border-image-width: 50px;
