--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -8,11 +8,7 @@
              border: solid #ccc 50px;
              display: inline-block;
              padding: 30px;
-             border-image-source: url(tic-tac-toe2.jpg);
-             border-image-slice: 100;
-             border-image-width: 50px;
-             border-image-outset: 0px;
-             border-image-repeat: round;
+             border-image-source: url(tic-tac-toe2.jpg) 100 / 50px / 0px round;        
             }
         </style>
     </head>
