--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -8,7 +8,7 @@
              border: solid #ccc 50px;
              display: inline-block;
              padding: 30px;
-             border-image-source: url(tic-tac-toe2.jpg) 100 / 50px / 0px round;        
+             border-image: url(tic-tac-toe2.jpg) 100 / 50px / 0px round;        
             }
         </style>
     </head>
