--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -7,7 +7,7 @@
             div {
              border: solid #ccc 50px;
              padding: 30px;
-             border-image: url(tic-tac-toe2.jpg) 100 / 50px / 0px round;        
+             border-image: url(tic-tac-toe2.jpg) 100 / 50px round;        
             }
         </style>
     </head>
