--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,7 +5,7 @@
         <title>football</title>
         <style>
             div {
-             border: solid #ccc 50px;
+             border: 50px solid #000;
              padding: 30px;
              border-image: url(tic-tac-toe2.jpg) 100 / 50px round;        
             }
