--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -6,8 +6,7 @@
         <style>
             div {
              border: 27px solid #000;
-             padding: 30px;
-             border-image: url(tic-tac-toe2.jpg) 100 / 50px round;        
+             border-image: url(tic-tac-toe2.jpg) 27px round;        
             }
         </style>
     </head>
