--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,7 +5,12 @@
         <title>football</title>
         <style>
             div {
-             border-image: url(tic-tac-toe2.jpg) 27px round;        
+             margin: 20px auto;
+             padding: 20px;
+             width: 160px;
+             height: 100px;
+             border: 67px solid;
+             border-image: url(tic-tac-toe2.jpg) 67 67 / 67px 67px round space;        
             }
         </style>
     </head>
