--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -10,7 +10,7 @@
              width: 160px;
              height: 100px;
              border: 67px solid;
-             border-image: url(tic-tac-toe2.jpg) 67 67 / 67px 67px space round;        
+             border-image: url(tic-tac-toe2.jpg) 67 67 space round;        
             }
         </style>
     </head>
