--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -15,6 +15,9 @@
         </style>
     </head>
     <body>
-        <div></div>
+       <div class="relative">
+         <img src= "tic-tac-toe2.jpg" alt="" />
+         <img src= "football_field.jpg" alt="" class="absolute" />
+       </div>
     </body>
 </html>
