--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -18,6 +18,15 @@
        <div class="relative">
          <img src= "tic-tac-toe2.jpg" alt="" />
          <img src= "football_field.jpg" alt="" class="absolute" />
+        .relative {
+           position: relative;
+           width: 300px;
+        }
+        .absolute {
+           position: absolute;
+           right: 30px;
+           bottom: 30px;
+        }
        </div>
     </body>
 </html>
