--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -16,7 +16,7 @@
     </head>
     <body>
        <div class="relative">
-         <img src= "tic-tac-toe2.jpg" alt="" />
+         <img src= "football_field.jpg" alt="" />
        </div>
     </body>
 </html>
