--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -16,6 +16,7 @@
     </head>
     <body>
        <div class="relative">
+         text-align: center;
          <img src= "football_field.jpg" alt="" />
         </div>
     </body>
