--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -10,6 +10,7 @@
              width: 300px;
              height: 120px;
              border: 67px solid;
+             border-image-slice: 31;
              border-image: url(tic-tac-toe2.jpg) 67 67 space round;
              text-align: center;
             }
