--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -9,8 +9,8 @@
              padding: 40px;
              width: 300px;
              height: 120px;
-             border: 31px solid;
-             border-image: url(tic-tac-toe2.jpg) 31 31 space round;
+             border: 67px solid #C0C0C0;
+             border-image: url(tic-tac-toe2.jpg) 67 67 space round;
              text-align: center;
             }
         </style>
