--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -9,7 +9,7 @@
              padding: 40px;
              width: 300px;
              height: 120px;
-             border: 67px solid #C0C0C0;
+             border: 67px solid grayscale;
              border-image: url(tic-tac-toe2.jpg) 67 67 space round;
              text-align: center;
             }
