--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -9,15 +9,15 @@
              padding: 40px;
              width: 300px;
              height: 120px;
-             border: 67px solid grayscale;
+             border: 67px solid;
              border-image: url(tic-tac-toe2.jpg) 67 67 space round;
              text-align: center;
-            }
+           }
         </style>
     </head>
     <body>
        <div class="relative">
-         <img src= "football_field.jpg" alt="" />
+         <img src= "football_field.jpg" alt="" /  "display: block; margin: auto;">
         </div>
     </body>
 </html>
