--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -17,7 +17,7 @@
     </head>
     <body>
        <div class="relative">
-         <img src= "football_field.jpg" alt="" /  "display: block; margin: 40px auto;">
+         <img src= "football_field.jpg" alt="" /  "display: block; margin: 40px 20px auto;">
         </div>
     </body>
 </html>
