--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -6,7 +6,7 @@
         <style>
             div {
              margin: 40px auto;
-             padding: 15px;
+             padding: 10px;
              width: 300px;
              height: 120px;
              border: 67px solid;
@@ -18,6 +18,7 @@
     <body>
        <div class="relative">
          <img src= "football_field.jpg" alt="" /  "display: block; margin: 20px 20px auto;">
+        <text-align: center;>
         </div>
     </body>
 </html>
