--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -6,7 +6,7 @@
         <style>
             div {
              margin: 40px auto;
-             padding: 10px;
+             padding: 8px;
              width: 300px;
              height: 120px;
              border: 67px solid;
@@ -18,7 +18,10 @@
     <body>
        <div class="relative">
          <img src= "football_field.jpg" alt="" /  "display: block; margin: 20px 20px auto;">
-        <text-align: center;>
+         <display: flex;>
+         <width: 250px;>
+         <Align-items: center;>
+         <justify-content: center;>
         </div>
     </body>
 </html>
