--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -17,7 +17,7 @@
     </head>
     <body>
        <div class="relative">
-         <img src= football_field.jpg;>
+         <img src= "football_field.jpg;">
          <display: flex;>
          <width: 250px;>
          <Align-items: center;>
