--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -17,9 +17,8 @@
     </head>
     <body>
        <div class="relative">
-         <img src= "football_field.jpg;">
+         <img src= "football_field.jpg;" alt="field" width="250" height="200" border="0">
          <display: flex;>
-         <width: 250px;>
          <Align-items: center;>
          <justify-content: center;>
         </div>
