--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -6,7 +6,7 @@
         <style>
             div {
              margin: 40px auto;
-             padding: 8px;
+             padding: 3px;
              width: 300px;
              height: 120px;
              border: 67px solid;
@@ -16,11 +16,8 @@
         </style>
     </head>
     <body>
-       <div class="relative">
-         <img src= "football_field.jpg;" alt="field" width="250" height="200" border="0">
-         <display: flex;>
-         <Align-items: center;>
-         <justify-content: center;>
+          <p style="text-align:center;"><img src=football_field.jpg" alt="field" width="314" height="229" border="0">
+          </p>
         </div>
     </body>
 </html>
