--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -11,12 +11,14 @@
              height: 120px;
              border: 67px solid;
              border-image: url(tic-tac-toe2.jpg) 67 67 space round;
+             position: absolute;
              text-align: center;
            }
         </style>
     </head>
     <body>
-          <p style="text-align:center;"><img src=football_field.jpg" alt="field" width="250" height="100" border="0">
+          <position: relative;>
+          <p style="text-align:center;"><img src=football_field.jpg" alt="field" width="200" height="80" border="0">
           </p>
         </div>
     </body>
