--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -9,8 +9,8 @@
              padding: 3px;
              width: 300px;
              height: 120px;
-             border: 31x solid;
-             border-image: url(tic-tac-toe2.jpg) 31 15 space round;
+             border: 67x solid;
+             border-image-outset: url(tic-tac-toe2.jpg) 67 67 space round;
              position: absolute;
              text-align: center;
            }
