--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -10,7 +10,7 @@
              width: 300px;
              height: 120px;
              border: 67x solid;
-             border-image-outset: url(tic-tac-toe2.jpg) 67 67 space round;
+             border-image-outset: url(tic-tac-toe2.jpg) 67 67 round;
              position: absolute;
              text-align: center;
            }
