--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,21 +5,14 @@
         <title>football</title>
         <style>
             div {
-             margin: 40px auto;
-             padding: 3px;
-             width: 300px;
-             height: 120px;
-             border: 67x solid;
-             border-image-outset: url(tic-tac-toe2.jpg) 67 67 round;
-             position: absolute;
-             text-align: center;
-           }
+             margin: 100px 200px auto;
+             border: 27px solid #C0C0C0;
+             padding: 100px;
+             border-image-repeat: url(tic-tac-toe2.jpg) 27 round;
+            }
         </style>
     </head>
     <body>
-          <position: relative;>
-          <p style="text-align:center;"><img src=football_field.jpg" alt="field" width="200" height="80" border="0">
-          </p>
-        </div>
+        <div></div>
     </body>
 </html>
