--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,10 +5,8 @@
         <title>football</title>
         <style>
             div {
-             margin: 100px 200px auto;
-             border: 27px solid #C0C0C0;
-             padding: 100px;
-             border-image-repeat: url(tic-tac-toe2.jpg) 27 round;
+             border: 27px solid;
+             border-image: url(tic-tac-toe2.jpg) 27 round;
             }
         </style>
     </head>
