--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -4,10 +4,10 @@
         <meta charset="utf-8">
         <title>football</title>
         <style>
-            div {
-             border: 27px solid;
-             border-image: url(tic-tac-toe2.jpg) 27 round;
-            }
+            <div>
+              border: 27px solid #000;
+              border-image: url(tic-tac-toe2.jpg)
+            </div>
         </style>
     </head>
     <body>
