--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,7 +5,7 @@
         <title>football</title>
         <style>
             <div>
-              border: 27px solid #000;
+              border: 27px solid;
               border-image: url(tic-tac-toe2.jpg)
             </div>
         </style>
