--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -5,7 +5,7 @@
         <title>football</title>
         <style>
               border: 27px solid;
-              border-image: url(tic-tac-toe2.jpg)
+              border-image: url(tic-tac-toe2.jpg) 27 round;
         </style>
     </head>
     <body>
