--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -4,8 +4,12 @@
         <meta charset="utf-8">
         <title>football</title>
         <style>
-              border: 27px solid;
-              border-image: url(tic-tac-toe2.jpg) 27 round;
+            div {
+             margin: 100px 200px auto;
+             border: 27px solid #C0C0C0;
+             padding: 100px;
+             border-image-repeat: url(tic-tac-toe2.jpg) 27 round;
+            }
         </style>
     </head>
     <body>
