--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -10,6 +10,7 @@
              padding: 100px;
              border-image-repeat: url(tic-tac-toe2.jpg) 27 round;
             }
+            </div>
         </style>
     </head>
     <body>
