--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -8,7 +8,7 @@
              margin: 100px 200px auto;
              border: 27px solid #C0C0C0;
              padding: 100px;
-             border-image-repeat: url(tic-tac-toe2.jpg) 27 round;
+             border-image: url(tic-tac-toe2.jpg) 27 round;
             }
             </div>
         </style>
