--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -6,7 +6,7 @@
         <style>
             div {
              margin: 100px 200px auto;
-             border: 27px solid #C0C0C0;
+             border: 27px solid;
              padding: 100px;
              border-image: url(tic-tac-toe2.jpg) 27 round;
             }
