--- a/Root Directory/Imitation/football2.html
+++ b/Root Directory/Imitation/football2.html
@@ -4,12 +4,11 @@
         <meta charset="utf-8">
         <title>football</title>
         <style>
-            div {
+            <div>
              margin: 100px 200px auto;
              border: 27px solid;
              padding: 100px;
              border-image: url(tic-tac-toe2.jpg) 27 round;
-            }
             </div>
         </style>
     </head>
