--- a/Root Directory/Imitation/imitation.html
+++ b/Root Directory/Imitation/imitation.html
@@ -3,15 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <title>Butterfly</title>
+        <title>Imitation</title>
         <link rel="stylesheet" type="text/css" href="style_imitation.css">
     </head>
     <body>
         <img class="penguin" src="penguins.jpg" alt="penguins">
-        <div>
-            <img class="football" src="football_field.jpg" alt="football field">
-            <img class="tictakto" src="tic-tac-toe.png" alt="tic-tac-toe">
-        </div>
+        <img class="football" src="football_field.jpg" alt="football field">
         <img class="dinosaur" src="dinosaur.png" alt="dinosaur">
         <img class="seagull" src="seagull.png" alt="seagull">
         <img class="butterfly" src="butterfly.jpg" alt="butterfly">
