--- a/Root Directory/Imitation/imitation.html
+++ b/Root Directory/Imitation/imitation.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -8,7 +9,10 @@
     </head>
     <body>
         <img class="penguin" src="penguins.jpg" alt="penguins">
-        <img class="football" src="football_field.jpg" alt="football field">
+        <div>
+            <img class="football" src="football_field.jpg" alt="football field">
+            <img class="tictakto" src="tic-tac-toe.png" alt="tic-tac-toe">
+        </div>
         <img class="dinosaur" src="dinosaur.png" alt="dinosaur">
         <img class="seagull" src="seagull.png" alt="seagull">
         <img class="butterfly" src="butterfly.jpg" alt="butterfly">
