--- a/Root Directory/Imitation/imitation.html
+++ b/Root Directory/Imitation/imitation.html
@@ -7,7 +7,7 @@
         <title>Imitation</title>
         <link rel="stylesheet" type="text/css" href="style_imitation.css">
     </head>
-    <body>
+    <body class="item">
         <img class="penguin" src="penguins.jpg" alt="penguins">
         <div>
             <img class="football" src="football_field.jpg" alt="football field">
