--- a/Root Directory/Imitation/imitation.html
+++ b/Root Directory/Imitation/imitation.html
@@ -11,6 +11,7 @@
         <img class="penguin" src="penguins.jpg" alt="penguins">
         <div>
             <img class="football" src="football_field.jpg" alt="football field">
+            <img class="football" src="football_field.jpg" alt="football field" class="absolute">
             <img class="tictakto">
         </div>
         <img class="dinosaur" src="dinosaur.png" alt="dinosaur">
