--- a/Root Directory/Imitation/imitation.html
+++ b/Root Directory/Imitation/imitation.html
@@ -9,9 +9,9 @@
     </head>
     <body class="item">
         <img class="penguin" src="penguins.jpg" alt="penguins">
-        <div>
-            <img class="football" src="football_field.jpg" alt="football field">
-            <img class="tictakto">
+        <div=class "relative">
+            <img class="football" src="football_field.jpg" alt="football field" alt="" class="absolute" />
+            <img class="tictakto alt="" /">
         </div>
         <img class="dinosaur" src="dinosaur.png" alt="dinosaur">
         <img class="seagull" src="seagull.png" alt="seagull">
