--- a/Root Directory/Imitation/imitation.html
+++ b/Root Directory/Imitation/imitation.html
@@ -10,8 +10,8 @@
     <body class="item">
         <img class="penguin" src="penguins.jpg" alt="penguins">
         <div=class "relative">
-            <img class="football" src="football_field.jpg" alt="football field" alt="" class="absolute" />
-            <img class="tictakto alt="" /">
+            <img class="football" src="football_field.jpg" alt="football field" alt="" class="absolute"/>
+            <img class="tictakto alt="" />
         </div>
         <img class="dinosaur" src="dinosaur.png" alt="dinosaur">
         <img class="seagull" src="seagull.png" alt="seagull">
