--- a/Root Directory/Imitation/imitation.html
+++ b/Root Directory/Imitation/imitation.html
@@ -9,7 +9,7 @@
     </head>
     <body class="item">
         <img class="penguin" src="penguins.jpg" alt="penguins">
-        <div=class "relative">
+        <div>
             <img class="football" src="football_field.jpg" alt="football field">
             <img class="tictakto">
         </div>
