--- a/Root Directory/Imitation/imitation.html
+++ b/Root Directory/Imitation/imitation.html
@@ -10,7 +10,7 @@
     <body class="item">
         <img class="penguin" src="penguins.jpg" alt="penguins">
         <div>
-            <img class="football">
+            <img class="football" scr=football_field.jpg" alt="football">
             <img class="tictakto">
         </div>
         <img class="dinosaur" src="dinosaur.png" alt="dinosaur">
