--- a/Root Directory/Imitation/imitation.html
+++ b/Root Directory/Imitation/imitation.html
@@ -9,10 +9,10 @@
     </head>
     <body class="item">
         <img class="penguin" src="penguins.jpg" alt="penguins">
-        <div>
-            <img class="football" scr=football_field.jpg" alt="football">
-            <img class="tictakto">
-        </div>
+        <section>
+            <p class="football"></p>
+            <p class="tictakto"></p>
+        </section>
         <img class="dinosaur" src="dinosaur.png" alt="dinosaur">
         <img class="seagull" src="seagull.png" alt="seagull">
         <img class="butterfly" src="butterfly.jpg" alt="butterfly">
