--- a/Root Directory/Imitation/imitation.html
+++ b/Root Directory/Imitation/imitation.html
@@ -9,10 +9,10 @@
     </head>
     <body class="item">
         <img class="penguin" src="penguins.jpg" alt="penguins">
-        <section>
-            <p class="football"> </p>
-            <p class="tictakto"> </p>
-        </section>
+        <div>
+            <img class="football" src="football_field.jpg">
+            <img class="tictakto">
+        </div>
         <img class="dinosaur" src="dinosaur.png" alt="dinosaur">
         <img class="seagull" src="seagull.png" alt="seagull">
         <img class="butterfly" src="butterfly.jpg" alt="butterfly">
