--- a/Root Directory/Final project/index_page.html
+++ b/Root Directory/Final project/index_page.html
@@ -16,7 +16,7 @@
         </video>
         <div class="separate"></div>
         <div class="source">
-            <img src="learn.jpeg" alt="learn more about us!(image)">
+            <img src="learn.jpg" alt="learn more about us!(image)">
             <p class="text"><a href="">Learn more about us!</a></p>
         </div>
         <div class="source">
