--- a/Root Directory/Final project/index_page.html
+++ b/Root Directory/Final project/index_page.html
@@ -10,13 +10,22 @@
         <div class="title">
             AppDev
         </div>
+        <div class="separate"></div>
         <video class="video" width="90%" height="auto" preload="auto" controls>
-            <source src="AppDev_clipchamp.mp4" type="video/mpeg" />
+            <source src="AppDev_intro.mp4" type="video/mpeg" />
             This browser does not support this video.
         </video>
         <div class="separate"></div>
+        <div class="change">
+            <p>Welcome to AppDev!</p>
+            <p>We are developing new apps</p>
+            <p>But we don't make spps with just our ideas</p>
+            <p>Based on your ideas, we'll make apps!</p>
+            <p>We are looking for ideas online</p>
+            <p>Why don't you make our ideas REAL with AppDev?</p>
+        </div>
         <div class="source">
-            <img src="learn.jpg" alt="learn more about us!(image)">
+            <img src="learn.jpeg" alt="learn more about us!(image)">
             <p class="text"><a href="">Learn more about us!</a></p>
         </div>
         <div class="source">
