--- a/Root Directory/Final project/index_page.html
+++ b/Root Directory/Final project/index_page.html
@@ -11,19 +11,22 @@
             AppDev
         </div>
         <div class="separate"></div>
-        <video class="video" width="90%" height="auto" preload="auto" controls>
-            <source src="AppDev_intro.mp4" type="video/mpeg" />
-            This browser does not support this video.
-        </video>
+        <iframe width="560" height="315" 
+        src="https://www.youtube.com/embed/aRNqI-xNDcA?si=98uzjXCXKmwCMzz3" 
+        title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        This video isn't available.</iframe>
         <div class="separate"></div>
-        <div class="change">
-            <p>Welcome to AppDev!</p>
-            <p>We are developing new apps</p>
-            <p>But we don't make spps with just our ideas</p>
-            <p>Based on your ideas, we'll make apps!</p>
-            <p>We are looking for ideas online</p>
-            <p>Why don't you make our ideas REAL with AppDev?</p>
+        <div>
+            <p class="change">Welcome to AppDev!</p>
+            <p class="change">We are developing new apps</p>
+            <p class="change">But we don't make spps with just our ideas</p>
+            <p class="change">Based on your ideas, we'll make apps!</p>
+            <p class="change">We are looking for ideas online</p>
+            <p class="change">Why don't you make our ideas REAL with AppDev?</p>
         </div>
+        <div class="separate"></div>
         <div class="source">
             <img src="learn.jpeg" alt="learn more about us!(image)">
             <p class="text"><a href="">Learn more about us!</a></p>
