--- a/Root Directory/Final project/index_page.html
+++ b/Root Directory/Final project/index_page.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="title">
-            AppDev
+            AppDev <p class="fake">fake company</p>
         </div>
         <div class="separate"></div>
         <iframe width="560" height="315" 
@@ -19,6 +19,7 @@
         This video isn't available.</iframe>
         <div class="separate"></div>
         <div>
+            <p>Hover your cursor below</p>
             <p class="change">Welcome to AppDev!</p>
             <p class="change">We are developing new apps</p>
             <p class="change">But we don't make spps with just our ideas</p>
