--- a/Root Directory/Final project/index_page.html
+++ b/Root Directory/Final project/index_page.html
@@ -22,7 +22,7 @@
             <p>Hover your cursor below</p>
             <p class="change">Welcome to AppDev!</p>
             <p class="change">We are developing new apps</p>
-            <p class="change">But we don't make spps with just our ideas</p>
+            <p class="change">But we don't make apps with just our ideas</p>
             <p class="change">Based on your ideas, we'll make apps!</p>
             <p class="change">We are looking for ideas online</p>
             <p class="change">Why don't you make our ideas REAL with AppDev?</p>
