--- a/Root Directory/Final project/index_page.html
+++ b/Root Directory/Final project/index_page.html
@@ -19,7 +19,7 @@
         This video isn't available.</iframe>
         <div class="separate"></div>
         <div>
-            <p>Hover your cursor below</p>
+            <p class="none">Hover your cursor below</p>
             <p class="change">Welcome to AppDev!</p>
             <p class="change">We are developing new apps</p>
             <p class="change">But we don't make apps with just our ideas</p>
