--- a/Root Directory/Final project/index_page.html
+++ b/Root Directory/Final project/index_page.html
@@ -29,23 +29,23 @@
         </div>
         <div class="separate"></div>
         <div class="source">
-            <img src="learn.jpg" alt="learn more about us!(image)">
+            <img class="im" src="learn.jpg" alt="learn more about us!(image)">
             <p class="text"><a href="">Learn more about us!</a></p>
         </div>
         <div class="source">
-            <img src="donate.jpg" alt="donation page(image)">
+            <img class="im" src="donate.jpg" alt="donation page(image)">
             <p class="text"><a href="">Donation page</a></p>
         </div> 
         <div class="source">
-            <img src="visit.jpg" alt="plan your visit!(image)">
+            <img class="im" src="visit.jpg" alt="plan your visit!(image)">
             <p class="text"><a href="">Plan your visit!</a></p>
         </div>
         <div class="source">
-            <img src="apps.jpg" alt="make your app!(image)">
+            <img class="im" src="apps.jpg" alt="make your app!(image)">
             <p class="text"><a href="">Make your app!</a></p>
         </div>
         <div class="source">
-            <img src="group.jpg" alt="know more about our group(image)">
+            <img class="im" src="group.jpg" alt="know more about our group(image)">
             <p class="text"><a href="">Know more about our group</a></p>
         </div>
     </body>
