--- a/Root Directory/Final project/AppDev_form.html
+++ b/Root Directory/Final project/AppDev_form.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" type="text/css" href="style_corp.css">
     </head>
     <body>
-        <img class="im" src="apps.jpg" alt="make your app!(image)">
+        <img class="image" src="apps.jpg" alt="make your app!(image)">
+        <div class="title">Make your app!</div>
         <div class="separate"></div>
         <form>
             <p class="form_title">Answer this form if you want to make an app!</p>
