--- a/Root Directory/Final project/AppDev_visit.html
+++ b/Root Directory/Final project/AppDev_visit.html
@@ -23,7 +23,7 @@
         <h2>What you can do when you visit our headquarter</h2>
         <p>This is fake company. Sentence about what you can do when you visit our headquarter. This is fake company. Sentence about what you can do when you visit our headquarter. This is fake company. Sentence about what you can do when you visit our headquarter. This is fake company. Sentence about what you can do when you visit our headquarter.</p>
         <div class="separate"></div>
-        <div class="source"></div>
+        <div class="source">
             <img class="im" src="learn.jpg" alt="learn more about us!(image)">
             <p class="text"><a href="">Learn more about us!</a></p>
         </div>
