--- a/Root Directory/Final project/AppDev_visit.html
+++ b/Root Directory/Final project/AppDev_visit.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="title">Plan your visit to AppDev.corp!</div>
-        <img class="img" src="visit.jpg" alt="plan your visit!(image)">
+        <img class="image" src="visit.jpg" alt="plan your visit!(image)">
         <p>You can visit AppDev.corp's headquarter. Check out the items below!</p>
         <div class="separate"></div>
         <h2>Locations</h2>
@@ -39,7 +39,7 @@
             <img class="im" src="group.jpg" alt="know more about our group(image)">
             <p class="text"><a href="">Know more about our group</a></p>
         </div>
-        <div class="source"></div>
+        <div class="source">
             <img class="im" src="home_page.jpg" alt="home page(image)">
             <p class="text"><a href="">Go back to home page</a></p>
         </div>
