--- a/Root Directory/Final project/AppDev_Learn.html
+++ b/Root Directory/Final project/AppDev_Learn.html
@@ -41,7 +41,7 @@
         </tr>
         </section>
         <div class="separate"></div>
-        <h2>Fill in this form if you want to make an app by using oer program.</h2>
+        <h2>Fill in this form if you want to make an app by using our program.</h2>
         <fieldset>
             <legend>Your information</legend>
             <p>Name:</p>
