--- a/Root Directory/Final project/AppDev_Learn.html
+++ b/Root Directory/Final project/AppDev_Learn.html
@@ -12,33 +12,34 @@
         <h2>AppDev will help you make your own app by three programs. You can choose one program that you think it's the best for you!</h2>
         <div class="separate"></div>
         <section class="container">
-        <tr class="table_top">
-            <td colspan="4">Program we have</td>
-        </tr>
-        <tr class="table_title">
-            <td>Program name</td>
-            <td>Quality</td>
-            <td>Difficulty level</td>
-            <td>Cost</td>
-        </tr>
-        <tr>
-            <td>Gold</td>
-            <td>High</td>
-            <td>Difficult</td>
-            <td>70$</td>
-        </tr>
-        <tr>
-            <td>Silver</td>
-            <td>Normal</td>
-            <td>Midium</td>
-            <td>60$</td>
-        </tr>
-        <tr>
-            <td>Bronze</td>
-            <td>Low</td>
-            <td>Easy</td>
-            <td>40$</td>
-        </tr>
+        <table>
+            <tr class="table_top">
+                <td colspan="4">Program we have</td>
+            </tr>
+            <tr class="table_title">
+                <td>Program name</td>
+                <td>Quality</td>
+                <td>Difficulty level</td>
+                <td>Cost</td>
+            </tr>
+            <tr>
+                <td>Gold</td>
+                <td>High</td>
+                <td>Difficult</td>
+                <td>70$</td>
+            </tr>
+            <tr>
+                <td>Silver</td>
+                <td>Normal</td>
+                <td>Midium</td>
+                <td>60$</td>
+            </tr>
+            <tr>
+                <td>Bronze</td>
+                <td>Low</td>
+                <td>Easy</td>
+                <td>40$</td>
+        </table>
         </section>
         <div class="separate"></div>
         <h2>Fill in this form if you want to make an app by using our program.</h2>
