--- a/Root Directory/Final project/AppDev_Donate.html
+++ b/Root Directory/Final project/AppDev_Donate.html
@@ -81,6 +81,28 @@
             <p>Amount that you'd like to donate.</p>
             <input type="text">
         </fieldset>
+        <button type="reset">Clear fields</button>
+        <button type="submit">Submit form</button>
     </form>
+    <div class="source"></div>
+        <img class="im" src="visit.jpg" alt="Plan your visit!(image)">
+        <p class="text"><a href="">Plan your visit!</a></p>
+    </div>
+    <div class="source">
+        <img class="im" src="learn.jpg" alt="Learn more about us!(image)">
+        <p class="text"><a href="">Donation page</a></p>
+    </div> 
+    <div class="source">
+        <img class="im" src="apps.jpg" alt="make your app!(image)">
+        <p class="text"><a href="">Make your app!</a></p>
+    </div>
+    <div class="source">
+        <img class="im" src="group.jpg" alt="know more about our group(image)">
+        <p class="text"><a href="">Know more about our group</a></p>
+    </div>
+    <div class="source">
+        <img class="im" src="home_page.jpg" alt="home page(image)">
+        <p class="text"><a href="">Go back to home page</a></p>
+    </div>
     </body>
 </html>
