--- a/Root Directory/Final project/AppDev_Donate.html
+++ b/Root Directory/Final project/AppDev_Donate.html
@@ -84,7 +84,7 @@
         <button type="reset">Clear fields</button>
         <button type="submit">Submit form</button>
     </form>
-    <div class="source"></div>
+    <div>
         <img class="im" src="visit.jpg" alt="Plan your visit!(image)">
         <p class="text"><a href="">Plan your visit!</a></p>
     </div>
