--- a/Root Directory/Final project/AppDev_Donate.html
+++ b/Root Directory/Final project/AppDev_Donate.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <title></title>
+        <title>Donation</title>
         <link rel="stylesheet" type="text/css" href="style_corp.css">
     </head>
     <body>
         <div class="title">Donation Page AppDev</div>
         <div class="separate"></div>
         <h2>Donations will be used as follows</h2>
-        <ul style="list-style-type: disc;">
+        <ul class="u" style="list-style-type: disc;">
             <li>Fake company</li>
             <li>Fake company</li>
             <li>Fake company</li>
@@ -84,7 +84,7 @@
         <button type="reset">Clear fields</button>
         <button type="submit">Submit form</button>
     </form>
-    <div>
+    <div class="source">
         <img class="im" src="visit.jpg" alt="Plan your visit!(image)">
         <p class="text"><a href="">Plan your visit!</a></p>
     </div>
